--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <link rel="manifest" href="manifest.json">
 
   <!-- iOS ICON (OBBLIGATORIA) -->
-  <link rel="apple-touch-icon" sizes="180x180" href="icons/icon-180.png">
+  <link rel="apple-touch-icon" href="icons/icon-192.png">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
